--- a/components/ScrollContainer.module.css
+++ b/components/ScrollContainer.module.css
@@ -23,7 +23,7 @@
 
 @media (max-width: 1024px) {
   .scrollingTextContainer {
-    width: 19rem;
+    width: 18rem;
     height: 5rem;
   }
 }
